- Checbox ui issue resolved. Fix issue of tooltip. - If click on outside the popup it hides, then cannot access. make it modal popup. - Some time data is not showing when we click on property name.

--- a/InventoryTracker-WebApp/Content/Css/Style.css
+++ b/InventoryTracker-WebApp/Content/Css/Style.css
@@ -203,3 +203,8 @@ td, th {
     border-radius: 4px !important;
     padding: 0px;
 }
+
+.checkboxStyleEdit {
+    height: 15px !important;
+    margin-left: -90px;
+}
